<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movie"
            type="com.improve10x.crud.movies.Movie" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".movies.BaseAddEditMovieActivity">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_id"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/movie_id_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{movie.movieId}"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/movie_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:text="@{movie.name}"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/series"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/series_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:text="@{movie.movieSeriesId}"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_url"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/imageUrl_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:text="@{movie.imageUrl}"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:text="@{movie.description}"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00BCD4"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textSize="16sp"
                tools:visibility="visible"
                android:visibility="gone" />


            <Button
                android:id="@+id/edit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00BCD4"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textSize="16sp"
                tools:visibility="visible"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>
</layout>