<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="seriesItem"
            type="com.improve10x.crud.series.SeriesItem" />
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".series.BaseAddEditSeriesItemActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/series_id"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/seriesid_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:text="@{seriesItem.seriesId}"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/series_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/series_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:text="@{seriesItem.title}"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_url"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/image_url_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:text="@{seriesItem.imageUrl}"
        android:inputType="textPersonName" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/sky_blue"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/sky_blue"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>
</layout>